# python-microbit-fs

./: .gitignore  CHANGELOG.md  README.md  make.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/microbit_micropython_fs/: __init__.py  api.py  cli.py  constants.py  device_info.py  exceptions.py  file.py  filesystem.py  flash_regions.py  hex_utils.py  hexes.py  uicr.py
src/micropython_microbit_fs/: __init__.py  cli.py
tests/: conftest.py  js_microbit_fs.py  microbitfs_js.py  test_add_files.py  test_cli.py  test_device_info.py  test_file.py  test_fs_reader.py  test_hex_strings.py  test_hexes.py  test_js_comparison.py
tests/fixtures/: makecode.hex  upy-v2-beta-uicr.hex
tests/microbitfs/: README.md  microbit-fs.js
