[project]
name = "microbit-micropython-fs"
version = "0.1.0"
description = "A Python library to add and extract files from MicroPython Intel Hex files for micro:bit"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Carlos Pereira Atencio" }]
requires-python = ">=3.9"
keywords = ["microbit", "micropython", "filesystem", "intel-hex", "embedded"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Filesystems",
]

dependencies = [
    "cyclopts>=3.24.0",
    "intelhex>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-sugar>=1.0.0",
    "mypy>=1.0.0",
    "mini-racer>=0.12.4",
]

[project.scripts]
microbit-fs = "microbit_micropython_fs.cli:main"

[project.urls]
Homepage = "https://github.com/carlosperate/python-microbit-fs"
Repository = "https://github.com/carlosperate/python-microbit-fs"
Issues = "https://github.com/carlosperate/python-microbit-fs/issues"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by ruff format)
    "B008",   # do not perform function calls in argument defaults
    "UP045",  # Use `X | None` - conflicts with py39 support using Optional
]

[tool.ruff.lint.isort]
known-first-party = ["microbit_micropython_fs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/microbit_micropython_fs"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
